# rc-design-collection-web

./: LICENSE  README.md  aci318m25.py  aci318m25_beam.py  aci318m25_column.py  aci318m25_footing.py  aci318m25_prestress.py  aci318m25_slab.py  beam.py  beam_manual.py  beam_pdf.py  build.sh  column.py  column_manual.py  column_pdf.py  footing.py  footing_manual.py  footing_pdf.py  main.py  prestress_beam.py  prestress_beam_pdf.py  pyproject.toml  requirements.txt  shared.py  slab.py  slab_manual.py  slab_pdf.py  smoke_test_fixes.py  test_pylatex.py
.footing_cache/: 000659aa3dc86543c8ded258c9819b55_t.json  0e95129217af419b237587b9eb660bfd_n.pkl  1a58ff46e1a569c3fb2434e8244adc55_n.pkl  3bd5e9e5c9fee352f08793561ba81390_n.pkl  62bd2e3a56ad2f2441a7c93791d067e6_n.pkl  6a6d5960eb3cb2cf87dfc657d2f65350_n.pkl  b1a578f3d49fe6ce1818caa8752da09c_n.json  c3beed209f97a5fd80ebb6fcf4315bfc_n.pkl  f13d15da6bdf474485dd50b8d0e7cc82_n.pkl
