[project]
name = "rc-beam-designer-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "air[standard]>=0.48.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.3",
    "pdfkit>=1.0.0",
    "pint>=0.25.3",
    "rubberize>=0.4.2.post1",
    "wkhtmltopdf>=0.2",
]
