[project]
name = "rc-beam-designer-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "air[standard]>=0.1.0",
    "fastapi[standard]>=0.115.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openseespy>=3.8.0.0",
    "pdfkit>=1.0.0",
    "pint>=0.25.3",
    "pydantic>=2.9.0",
    "pylatex>=1.4.2",
    "rubberize>=0.4.2.post1",
    "wkhtmltopdf>=0.2",
]
